# ClockBlocks

./: .env.example  .gitignore  LICENSE  MyCert.crt  MyKey.key  MySigningCert.p12  README.md  deleteMe.py  makefile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
public/: googlecreds.json
src/: App.css  App.tsx  dbInteraction.ts  main.tsx  types.ts  writeToGSheet.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: sheet_config.json
src-tauri/src/: main.rs
src/components/: App.tsx  Box.tsx  ChartPage.tsx  ChartSessionPanel.tsx  ChartSorting.tsx  DropDownButton.tsx  EditModal.tsx  GoogleSignIn.tsx  IconButton.tsx  Icons.tsx  NavigationBar.tsx  PrimaryButton.tsx  RoundedBox.tsx  SecondaryButton.tsx  SettingsPage.tsx  TimerPage.tsx
src/context/: SessionContext.tsx
src/lib/: dbInteraction.ts  types.ts  utils.ts  writeToGSheet.ts
src/pages/: ChartPage.tsx  SettingsPage.tsx  TimerPage.tsx
