[package]
name = "ClockBlocks"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "fs-write-file", "fs-remove-dir", "fs-create-dir", "fs-rename-file", "fs-copy-file", "fs-read-dir", "fs-exists", "fs-remove-file", "dialog-all", "path-all", "shell-all", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
url = "2.3"
chrono = "0.4"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
tauri-plugin-oauth = "0.0.0-alpha.0"
oauth2 = "4.3"
reqwest = { version = "0.11", features = ["json"] }
google-sheets4 = "*"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http2"] }
posthog-rs = "0.2.0"
uuid = { version = "1.3.0", features = ["v4"] }
log = "0.4"
simplelog = "0.11"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
